k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-manager
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-manager
  template:
    metadata:
      labels:
        app: todo-manager
    spec:
      containers:
        - name: todo-manager
          image: fardeen2000/todo-manager:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
